
- System configuration (events, SNMP traps, templates, event processing rules)
  can be exported and imported in XML format - this solves various problems
  with old NXMP files
- NXSL improvements:
	- New functions: GetDCIObject, GetInterfaceName, FindNodeObject, trace
	- Added built-in constants TRUE and FALSE
- Added support for encrypted DB passwords in netxmsd.conf
- Improved SNMPv3 support
- Fixed issues: #62, #278


*
* 0.2.31
*

- Added external audit logging via syslog
- Added support for secondary RADIUS server
- Added size and age filters to agent parameters File.Size and File.Count 
- PortCheck subagent: connection timeout made configurable
- NXSL: added functions trim(), ltrim(), and rtrim()
- Expat XML parser bundled with NetXMS source package
- Fixed issues: #267, #268, #269, #270, #272, #273, #274


*
* 0.2.30
*

- Fixed various database upgrade issues in 0.2.29
- Fixed issues: #266


*
* 0.2.29
*

- Fixed database and agent upgrade issues in 0.2.28
- NXSL: explicit type cast improved


*
* 0.2.28
*

- Added encryption support for SNMP version 3
- Fixed compatibility issues with NetXMS SNMP version 3 implementation and 
  Cisco devices
- Automatic network discovery improved
- LOGSCAN subagent removed (superseded by LOGWATCH subagent)
- Fixed issues: #234, #259, #260, #261, #262, #263, #264


*
* 0.2.27
*

- Added support for SNMP version 3 (without encryption)
- Log monitoring improved
- Built-in scripting language (NXSL) improved
- Fixed issues: #223, #249, #250, #252, #253, #254, #255, #256, #258


*
* 0.2.26
*

- Fixed compilation problems on some UNIX platforms
- Fixed incorrect behaviour of Disk.Free parameter on some Windows systems
- Fixed broken Windows 2000 support (issue #248)


*
* 0.2.25
*

- Implemented automatic template application based on filters
- Implemented automatic node binding to containers based on filters
- Implemented database export and import
- Database checking tool (nxdbmgr) improved