@@ -10,7 +10,8 @@
 	- Added built-in constants TRUE and FALSE
 - Added support for encrypted DB passwords in netxmsd.conf
 - Improved SNMPv3 support
-- Fixed issues: #62, #278
+- Windows management console: implemented object search by comments
+- Fixed issues: #62, #278, #283
 
 
 *
